--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+dist: trusty
+group: travis_latest
 sudo: false
 cache:
   directories:
@@ -7,6 +9,8 @@ language: python
 
 
 matrix:
+  fast_finish: true
+
   include:
     - python: "2.7"
       env: TOXENV=py27
@@ -14,18 +18,40 @@ matrix:
       env: TOXENV=py34
     - python: "3.5"
       env: TOXENV=py35
+    - python: "3.6"
+      env: TOXENV=py36
     - python: "pypy"
       env: TOXENV=pypy
+    - python: "pypy3"
+      env: TOXENV=pypy3
+    - python: "3.7"
+      env: TOXENV=py37
+      dist: xenial
+      sudo: true
+
+    # Prevent breakage by a new releases
+    - python: "3.6-dev"
+      env: TOXENV=py36
+    - python: "3.7-dev"
+      env: TOXENV=py37
 
     # Meta
-    - python: "3.5"
-      env: TOXENV=flake8
-    - python: "3.5"
+    - python: "3.6"
+      env: TOXENV=lint
+    - python: "3.6"
       env: TOXENV=manifest
-    - python: "3.5"
+    - python: "3.6"
       env: TOXENV=docs
-    - python: "3.5"
+    - python: "3.6"
       env: TOXENV=readme
+    - python: "3.6"
+      env: TOXENV=changelog
+    - python: "3.6"
+      env: TOXENV=typing
+
+  allow_failures:
+    - python: "3.6-dev"
+    - python: "3.7-dev"
 
 
 install:
