--- a/debian/control
+++ b/debian/control
@@ -29,7 +29,7 @@ Standards-Version: 4.2.1
 Homepage: https://attrs.readthedocs.org/
 Vcs-Git: https://salsa.debian.org/python-team/modules/python-attrs.git
 Vcs-Browser: https://salsa.debian.org/python-team/modules/python-attrs
-XS-Pexip-Upstream: http://ftp.debian.org/debian/ buster
+XS-Pexip-Upstream: http://ftp.debian.org/debian/ buster-backports
 
 Package: python-attr
 Architecture: all
