--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,33 +1,34 @@
+---
 repos:
   - repo: https://github.com/psf/black
-    rev: 19.3b0
+    rev: 20.8b1
     hooks:
       - id: black
-        language_version: python3.7
-        # override until resolved: https://github.com/ambv/black/issues/402
-        files: \.pyi?$
-        types: []
-
-  - repo: https://gitlab.com/pycqa/flake8
-    rev: 3.7.8
-    hooks:
-      - id: flake8
-        language_version: python3.7
-
-  - repo: https://github.com/asottile/seed-isort-config
-    rev: v1.9.3
-    hooks:
-      - id: seed-isort-config
+        language_version: python3.8
 
   - repo: https://github.com/pre-commit/mirrors-isort
-    rev: v4.3.21
+    rev: v5.6.4
     hooks:
       - id: isort
-        language_version: python3.7
+        additional_dependencies: [toml]
+
+  - repo: https://gitlab.com/pycqa/flake8
+    rev: 3.8.4
+    hooks:
+      - id: flake8
+        language_version: python3.8
+
+  - repo: https://github.com/econchick/interrogate
+    rev: 1.3.1
+    hooks:
+      - id: interrogate
+        args: [tests]
+        language_version: python3.8
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.3.0
+    rev: v3.3.0
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
       - id: debug-statements
+      - id: check-toml
