--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,27 @@
+[pytest]
+addopts = -ra
+testpaths = tests
+xfail_strict = true
+filterwarnings =
+    once::Warning
+    ignore:::pympler[.*]
+
+
+# Keep docs in sync with docs env and .readthedocs.yml.
+[gh-actions]
+python =
+    2.7: py27
+    3.5: py35
+    3.6: py36
+    3.7: py37, docs
+    3.8: py38, lint, manifest, typing, changelog
+    3.9: py39
+    pypy2: pypy2
+    pypy3: pypy3
+
+
 [tox]
-envlist = typing,lint,py27,py34,py35,py36,py37,py38,pypy,pypy3,manifest,docs,pypi-description,changelog,coverage-report
+envlist = typing,lint,py27,py35,py36,py37,py38,py39,pypy,pypy3,manifest,docs,pypi-description,changelog,coverage-report
 isolated_build = True
 
 
@@ -14,7 +36,7 @@ commands = python -m pytest {posargs}
 
 [testenv:py27]
 extras = {env:TOX_AP_TEST_EXTRAS:tests}
-commands = coverage run --parallel -m pytest {posargs}
+commands = coverage run -m pytest {posargs}
 
 
 [testenv:py37]
@@ -24,7 +46,7 @@ install_command = pip install --no-compile {opts} {packages}
 setenv =
     PYTHONWARNINGS=d
 extras = {env:TOX_AP_TEST_EXTRAS:tests}
-commands = coverage run --parallel -m pytest {posargs}
+commands = coverage run -m pytest {posargs}
 
 
 [testenv:py38]
@@ -35,27 +57,30 @@ install_command = pip install --no-compile {opts} {packages}
 setenv =
     PYTHONWARNINGS=d
 extras = {env:TOX_AP_TEST_EXTRAS:tests}
-commands = coverage run --parallel -m pytest {posargs}
+commands = coverage run -m pytest {posargs}
 
 
 [testenv:coverage-report]
 basepython = python3.7
 skip_install = true
-deps = coverage
+deps = coverage[toml]>=5.0.2
 commands =
     coverage combine
     coverage report
 
 
 [testenv:lint]
-basepython = python3.7
+basepython = python3.8
 skip_install = true
-deps = pre-commit
+deps =
+    pre-commit
 passenv = HOMEPATH  # needed on Windows
-commands = pre-commit run --all-files
+commands =
+    pre-commit run --all-files
 
 
 [testenv:docs]
+# Keep basepython in sync with gh-actions and .readthedocs.yml.
 basepython = python3.7
 extras = docs
 commands =
@@ -65,14 +90,14 @@ commands =
 
 
 [testenv:manifest]
-basepython = python3.7
+basepython = python3.8
 deps = check-manifest
 skip_install = true
 commands = check-manifest
 
 
 [testenv:pypi-description]
-basepython = python3.7
+basepython = python3.8
 skip_install = true
 deps =
     twine
@@ -83,15 +108,15 @@ commands =
 
 
 [testenv:changelog]
-basepython = python3.7
+basepython = python3.8
 deps = towncrier
 skip_install = true
 commands = towncrier --draft
 
 
 [testenv:typing]
-basepython = python3.7
+basepython = python3.8
 deps = mypy
 commands =
-    mypy src/attr/__init__.pyi src/attr/_version_info.pyi src/attr/converters.pyi src/attr/exceptions.pyi src/attr/filters.pyi src/attr/validators.pyi
+    mypy src/attr/__init__.pyi src/attr/_version_info.pyi src/attr/converters.pyi src/attr/exceptions.pyi src/attr/filters.pyi src/attr/setters.pyi src/attr/validators.pyi
     mypy tests/typing_example.py
